# potato-chess-crazyhouse

./: README.md  package  style.css
js/: board.js  drawing.js  engine.js  engine.wasm  miscUtils.js  move.js  pieces.js  searchWorker.js
src/: CMakeLists.txt  a.out  bitboard.cpp  bitboard.h  main.cpp  move.cpp  move.h  moveGen.cpp  perft.cpp  search.cpp
